<resources>
    <string name="app_name">Koronavilkku</string>
    <string name="all_next">Next</string>
    <string name="all_previous">Previous</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_thl_image_description">Finnish Institute for Health and Welfare</string>
    <string name="all_today">today</string>
    <string name="all_yesterday">yesterday</string>
    <string name="all_date_and_time">%1$s at %2$s</string>
    <string name="all_date_range" translatable="false">%1$s\u2013%2$s</string>
    <string name="all_finnish" translatable="false">Suomi</string>
    <string name="all_swedish" translatable="false">Svenska</string>
    <string name="all_english" translatable="false">English</string>
    <string name="all_app_additional_info">More information about Koronavilkku</string>
    <string name="all_system_enable">Enable</string>
    <string name="all_ok">OK</string>
    <string name="all_allow">Allow</string>
    <string name="all_deny">Deny</string>
    <string name="all_close">Close</string>
    <string name="all_continue">Continue</string>
    <string name="diagnosis_title">Report your infection</string>
    <string name="diagnosis_body1">You will need a key code to report your infection. You will receive a key code from a healthcare professional or via text message from the Finnish Institute for Health and Welfare.</string>
    <string name="diagnosis_body2">Enter the key code on the phone you usually carry with you. Koronavilkku indicates potential exposure to users who have been close to you during the period when you could have infected others. The key code does not reveal your identity.</string>
    <string name="diagnosis_page_title">Report your infection</string>
    <string name="diagnosis_code_entry">Report your infection</string>
    <string name="diagnosis_en_disabled">Exposure notifications must be turned on to report an infection. Enable exposure notifications in the Koronavilkku Home view.</string>
    <string name="diagnosis_locked_title">You have already reported your infection</string>
    <string name="diagnosis_locked_body1">The information you have reported will help to tackle the coronavirus epidemic. The app is now locked and no longer collects information about nearby phones. We wish you a quick recovery!</string>
    <string name="diagnosis_locked_image_description">Locked</string>
    <string name="code_entry_title">Enter your key code</string>
    <string name="code_entry_submit">Send</string>
    <string name="code_entry_invalid">The key code is invalid or has expired. Please check that you have entered the exact code you received.</string>
    <string name="code_entry_submit_failed">Failed to report infection because the server cannot be reached. Please check your internet connection and try again.</string>
    <string name="code_entry_en_disabled">Exposure notifications must be turned on to report an infection. Enable exposure notifications in the Koronavilkku Home view.</string>
    <string name="code_entry_info">The key code does not reveal your identity.</string>
    <string name="diagnosis_complete_title">Thank you for your report</string>
    <string name="diagnosis_complete_body">The information you have reported will help to tackle the coronavirus epidemic. The app is now locked and no longer collects information about nearby phones. We wish you a quick recovery!</string>
    <string name="diagnosis_complete_continue">OK</string>
    <string name="home_title">Home</string>
    <string name="home_exposure_label">Potential exposure</string>
    <string name="home_no_exposure_label">No observed exposures</string>
    <string name="home_pending_check_label">Checking for potential exposures has not been carried out for over 24 hours. The app will try again later. You can start a check now.</string>
    <string name="home_exposure_sub_label">You may have been exposed to the coronavirus</string>
    <string name="home_no_exposure_sub_label">You have not been near a person who has reported an infection</string>
    <string name="home_exposure_instructions">See instructions</string>
    <string name="home_exposure_check">Check now</string>
    <string name="home_notifications_unknown" translatable="false">!</string>
    <string name="home_show_notification_guide">If you receive an exposure notification follow these instructions</string>
    <string name="home_symptom_label">Do you think you may have COVID-19?</string>
    <string name="home_prevention_label">How to protect yourself from an infection</string>
    <string name="home_prevention_url">https://thl.fi/en/web/infectious-diseases-and-vaccinations/what-s-new/coronavirus-covid-19-latest-updates/transmission-and-protection-coronavirus</string>
    <string name="home_statistics_label">COVID-19 in Finland</string>
    <string name="home_statistics_url">https://thl.fi/en/web/infectious-diseases-and-vaccinations/what-s-new/coronavirus-covid-19-latest-updates/situation-update-on-coronavirus</string>
    <string name="home_thl_url">https://thl.fi/en/web/thlfi-en</string>
    <string name="home_status_system_enabled">Koronavilkku is active</string>
    <string name="home_status_system_disabled">Koronavilkku is disabled</string>
    <string name="home_status_system_locked">Koronavilkku is locked</string>
    <string name="home_status_notifications_blocked">Notifications are blocked</string>
    <string name="home_status_turn_on">Turn on</string>
    <string name="home_symptom_sub_label">Take an online medical COVID-19 symptom check-up</string>
    <string name="home_app_guide">About Koronavilkku</string>
    <string name="home_status_disabled_explained">Re-enable exposure notifications.</string>
    <string name="home_status_enabled_explained">The app works even if you close it.</string>
    <string name="home_status_locked_explained">Thank you for reporting your infection. The app will no longer collect information about encounters. We wish you a quick recovery!</string>
    <string name="home_status_notifications_blocked_explained">Turn on notifications so that Koronavilkku can notify you of potential exposure.</string>
    <string name="symptoms_title">COVID-19 symptom assessment</string>
    <string name="symptoms_info">If you suspect that you have COVID-19, take an online COVID-19 symptom assessment in the Omaolo service. You will receive additional instructions based on your answers. It takes approximately 10 minutes to complete the assessment.</string>
    <string name="symptoms_link_title">Take a symptom assessment in the Omaolo service</string>
    <string name="symptoms_link">https://www.omaolo.fi/palvelut/oirearviot/649?lang=en</string>
    <string name="symptoms_link_name">omaolo.fi</string>
    <string name="settings_title">Settings</string>
    <string name="guide_title">"About Koronavilkku "</string>
    <string name="guide_p1_text">Koronavilkku is an application produced by the Finnish Institute for Health and Welfare that informs you if it estimates that you may have been exposed to the coronavirus. If you are diagnosed with COVID-19, you can report this anonymously using the app. Your privacy is strongly protected.</string>
    <string name="guide_code_title">Each phone receives a random code</string>
    <string name="guide_code_text">The application generates an ID code for each phone. The code is random and changes several times an hour to ensure your privacy. The ID code does not contain information about you or your phone.</string>
    <string name="guide_exchange_title">Phones swap codes with each other</string>
    <string name="guide_exchange_text">When close enough to each other, the apps swap codes through a Bluetooth signal. This allows the application to keep track of encounters without saving users\' identity or location data.</string>
    <string name="guide_infection_title">If you are diagnosed with COVID-19</string>
    <string name="guide_infection_text">If you are diagnosed with COVID-19, you will receive a key code from your healthcare professional. You can use this code to report your infection through the app. If you report your infection, the app sends your phone\'s ID codes to the server. No personal or location information is sent with the ID codes, so you will remain anonymous.</string>
    <string name="guide_check_title">The app compares codes</string>
    <string name="guide_check_text">Koronavilkku downloads a list of codes from the server several times a day. The list contains the codes of the phones that have been used to report a COVID-19 infection through the app. Koronavilkku compares these codes to the codes your phone has collected from other app users. This enables the app to determine whether you have been near an infected person.</string>
    <string name="guide_notification_title">You receive a notification of potential exposure</string>
    <string name="guide_notification_text">If the codes collected by your phone match those received from people who have reported a COVID-19 infection, you will be notified of a potential exposure. You can then provide your contact information to healthcare professionals and receive further instructions.\n\nIf you think that you may have COVID-19, you can take a symptom assessment at any time in the Omaolo.fi web service.</string>
    <string name="guide_privacy_title">Your privacy is protected</string>
    <string name="guide_privacy_body">The app protects your privacy in the following ways:</string>
    <string name="guide_privacy_item1">The information on encounters is stored only on your device. The stored data is deleted within 21 days, and it is deleted immediately if you remove the app.</string>
    <string name="guide_privacy_item2">Your identity is encrypted using random IDs.</string>
    <string name="guide_privacy_item3">The app never saves your phone\'s location information.</string>
    <string name="guide_button_back">Back</string>
    <string name="disable_title">COVID-19 exposure notifications are enabled</string>
    <string name="disable_subtitle">Do you need to disable exposure notifications?</string>
    <string name="disable_body">In some situations, it may be necessary to temporarily disable exposure notifications. This may be the case, for example, if you are a healthcare professional and do not want to use the application at your workplace.\n\nIf you disable exposure notifications, the application will stop working.</string>
    <string name="disable_note">To protect your health and the health of your loved ones, it is recommended that you disable exposure notifications only if it is really necessary. Remember to enable them again as soon as possible.</string>
    <string name="disable_turn_off_note">Disable COVID-19 exposure notifications</string>
    <string name="disable_button_turn_off">Disable</string>
    <string name="test_update_exposures" translatable="false">Create exposure</string>
    <string name="test_reset_onboarding" translatable="false">Start onboarding</string>
    <string name="test_download" translatable="false">Download keys now</string>
    <string name="test_set_batch_id" translatable="false">Set</string>
    <string name="test_batch_id_hint" translatable="false">Batch id</string>
    <string name="test_clear_exposures" translatable="false">Delete exposures</string>
    <string name="test_lock" translatable="false">Set app locked</string>
    <string name="test_unlock" translatable="false">Clear app locked</string>
    <string name="test_set_old_update" translatable="false">Set check as delayed</string>
    <string name="test_check_play_services" translatable="false">Check Play services</string>
    <string name="test_update_municipalities" translatable="false">Reload municipality data</string>
    <string name="test_daily_summaries" translatable="false">Daily summaries</string>
    <string name="test_create_notification" translatable="false">Create notification</string>
</resources>