<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/view_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/guide_title"
                    android:textAppearance="?attr/textAppearanceHeadline2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_p1_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- CODE -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_device_codes"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/guide_code_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_code_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- EXCHANGE -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_exchange_codes"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/guide_exchange_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_exchange_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- CHECK -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_compare_codes"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_check_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_check_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- NOTIFICATION -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_notifications"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/guide_notification_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_notification_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- INFECTION -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_broadcasting_infection"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/guide_infection_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_infection_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <!-- PRIVACY -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/guide_privacy_title"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_privacy_body"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <fi.thl.koronahaavi.widget.BulletTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_privacy_item1"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <fi.thl.koronahaavi.widget.BulletTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_privacy_item2"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <fi.thl.koronahaavi.widget.BulletTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_privacy_item3"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_guide_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/guide_button_back" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_guide_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            style="@style/Widget.Vilkku.Button.IconOnly"
            android:theme="@style/ThemeOverlay.Vilkku.Button.Surface"
            app:icon="@drawable/ic_x"
            app:iconSize="24dp"
            android:contentDescription="@string/guide_button_back"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>