<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include android:id="@+id/layout_toolbar" layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hyphenationFrequency="normal"
                    android:text="@string/disable_title"
                    android:textAppearance="?attr/textAppearanceHeadline2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hyphenationFrequency="normal"
                    android:text="@string/disable_subtitle"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/disable_body"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <fi.thl.koronahaavi.widget.BulletTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        style="@style/Widget.Vilkku.BulletTextView.Critical"
                        android:text="@string/disable_note"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:hyphenationFrequency="normal"
                    android:text="@string/disable_turn_off_note"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disable_button_turn_off"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/disable_button_turn_off"
                    android:theme="@style/ThemeOverlay.Vilkku.Button.Critical" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>